# termhelper

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  build.py  cmdhelper.spec  docker_build.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  dependencies.yml
cmdhelper/: __init__.py  __main__.py  ai_config.py  ai_explain.py  ai_handler.py  cmdhelper.py  config.py  interactive.py  last_update.txt  online_sources.py  update.py  utils.py
cmdhelper/data/: commands.yaml  user_commands.yaml  win.yaml
cmdhelper/web/: app.py
cmdhelper/web/static/: app.js  style.css
cmdhelper/web/templates/: index.html
docs/: details.md
scripts/: verify_ollama.py
tests/: test_online_sources.py
