[metadata]
name = cmdhelper
version = 1.0.0
description = A command-line tool to help users find and understand Linux commands
long_description = file: README.md
long_description_content_type = text/markdown
author = juniort34
author_email = jj1982268@gmail.com
url = https://github.com/juniort34/termhelper
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8
install_requires =
    rich>=14.0.0
    flask>=3.0.0
    openai>=1.0.0
    python-dotenv>=1.0.0
    pyyaml>=6.0.1
    rapidfuzz>=3.0.0
    requests>=2.31.0
    markdown>=3.5.1

[options.entry_points]
console_scripts =
    cmdhelper = cmdhelper.cli:main

[flake8]
max-line-length = 100
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[isort]
profile = black
multi_line_output = 3
